<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    tools:context=".activities.AddActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/newMasterclass"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/new_masterclass"
        android:textColor="@color/purple"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@id/newMasterclass"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="30dp"
                android:text="@string/enter_the_song"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_event_member"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="30dp"
                android:text="@string/enter_the_date"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_event_member"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/black"
                android:text="@string/enter_hall"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/hall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_event_member"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/black"
                android:text="@string/enter_choreographer"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/choreographer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_marginEnd="30dp"
                android:background="@drawable/item_event_member"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:textColor="@color/black"
                android:layout_marginEnd="30dp"
                android:text="@string/enter_number_of_participants"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/membersNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/black"
                android:background="@drawable/item_event_member"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:padding="10dp"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:text="@string/add_button"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/yellow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    

</androidx.constraintlayout.widget.ConstraintLayout>