<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"

    tools:context=".activities.TheMostMainActivity">

    <TextView
        android:id="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"

        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:textColor="@color/purple"
        android:fontFamily="@font/montserrat"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:text="@string/sign_out"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"/>


    <TextView
        android:id="@+id/currentMasterclasses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/current_masterclasses"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <FrameLayout
        android:id="@+id/recyclerViewLayout"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/currentMasterclasses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/masterclassesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </FrameLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:padding="10dp"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:text="@string/add_button"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/yellow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>