<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    tools:context=".activities.InfoActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:textColor="@color/purple"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_semibold"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        />

    <TextView
        android:id="@+id/date"
        android:textColor="@color/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:id="@+id/choreographer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/choreographer"/>

    <TextView
        android:id="@+id/choreographerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/choreographer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/item_event_member"
        />

    <TextView
        android:id="@+id/hall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/choreographerName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/hall"/>

    <TextView
        android:id="@+id/hallName"
        android:textColor="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hall"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/item_event_member"
        />

    <TextView
        android:id="@+id/placesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hallName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/places_left"/>

    <TextView
        android:id="@+id/places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hallName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/purple"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/placesLeft"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/members"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:padding="10dp"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:text="@string/sign_up"
        android:textColor="@color/purple"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/yellow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/item_event_member"
        android:padding="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintTop_toBottomOf="@+id/members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/membersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>